# txt-to-epub

./: CHANGELOG.md  LLM_INTEGRATION_DESIGN.md  OPTIMIZATION_NOTES.md  OPTIMIZATION_README.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  README_zh-CN.md  README_zh.md  WORK_COMPLETED.md  debug_regex.py  demo_multilingual_parsing.py  package.oo.yaml  pyproject.toml  requirements.txt  simple_multilingual_test.py  style_preview.html  test_analysis.py  test_chapter_issue.py  test_content.txt  test_duplicate_content.txt  test_english_support.py  test_epub_generation.py  test_markdown_report.py  test_multilingual_validator.py  test_toc_fix.py  test_validation.py  title_detector.py  verify_fix.py
.claude/: settings.local.json
flows/flow-1/: .flow.ui.oo.json  flow.oo.yaml
flows/test/: .flow.ui.oo.json  flow.oo.yaml
flows/test-txt-first-800/: .flow.ui.oo.json  flow.oo.yaml
oo-locales/: en.json  zh-CN.json
slotflows/+slotflow#1/: .slotflow.ui.oo.json  slotflow.oo.yaml
subflows/flow-1/: .subflow.ui.oo.json  subflow.oo.yaml
subflows/test/: .subflow.ui.oo.json  subflow.oo.yaml
subflows/txt-to-epub/: .subflow.ui.oo.json  subflow.oo.yaml
subflows/txts-to-epubs/: .subflow.ui.oo.json  subflow.oo.yaml
tasks/txt-first-800-chars/: __init__.py  task.oo.yaml
tasks/txt-to-epub/: __init__.py  core.py  data_structures.py  html_generator.py  legacy.py  llm_parser_assistant.py  parser.py  parser_config.py  task.oo.yaml  (+2 more)
tasks/txt-to-epub-core/: __init__.py  core.py  llm_parser_assistant.py  parser.py  parser_config.py  task.oo.yaml
tests/: __init__.py  test_parser.py
(+1 files in other folders)
